--- a/Documentation.tex
+++ b/Documentation.tex
@@ -131,7 +131,7 @@ Wartość ta powinna być na tyle mała, by temperatura będąc niewiele większ
 \indent Prawdopodobieństwo jest wykorzystywane przy decyzji zamiany nowego i gorszego rozwiązania, z wcze\si niejszym i lepszym. 
 
 Prawdopodobieństwo tej zamiany zależy od funkcji kosztu oraz obecnej temperatury. Prawdopodobieństwo zatem można przedstawić w następujący sposób:
-$$ P = \exp(\frac{\Delta E}{T})  $$
+$$ P = \exp\left(\frac{\Delta E}{T}\right)  $$
 gdzie:\\
 \begin{flalign}
 & \Delta E - funkcja\ kosztu& 
@@ -982,24 +982,43 @@ Dalsze prace nad programem powinny rozwinąć projekt o możliwo\si ć zadania p
 
 \begin{thebibliography}{12}
 
+% sym
+\bibitem{0} http://iswiki.if.uj.edu.pl/iswiki/images/2/20/AiSD\_22.\_Symulowane \_wy\%C5\%BCarzanie\_\%28problem\_komiwoja\%C5\%BCera\%29.pdf [dostęp: 20 sierpnia 2018]
+
+\bibitem{1} M. Duque-Anth, \textit{Constructing efficient simulated annealing algorithms}, [w:] ,,Discrete Applied Mathematics", 1997 nr 77/2, s. 139-159 Dostępny w Internecie: https://www.sciencedirect.com/science/article/pii/S0166218X96001321
+[dostęp 20 sierpnia 2018]
+
+\bibitem{2} http://wikizmsi.zut.edu.pl/uploads/archive/5/5e/20140303092223!OzWSI\_I\_S1\_W1.pdf
+[dostęp: 25 sierpnia 2018]
+
+\bibitem{3} http://www.wikizmsi.zut.edu.pl/uploads/e/eb/OzWSI\_I\_S1\_c1.pdf
+[dostęp: 25 sierpnia 2018]
+
 %funkcje testowe
-\bibitem{1} H. Abiyev and M. Tunay, \textit{Optimization of High-Dimensional Functions through Hypercube Evaluation} [online] Dostępny w Internecie: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4538776/ [dostęp: 13 listopada 2018]
+\bibitem{4} https://en.wikipedia.org/wiki/Test\_functions\_for\_optimization\#Test\_functions\_for\_single-objective\_optimization [dostęp: 30 października 2018]
+
+\bibitem{5} H. Abiyev, M. Tunay, \textit{Optimization of High-Dimensional Functions through Hypercube Evaluation}, Dostępny w Internecie:https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4538776/
+[dostęp: 13 listopada 2018]
 
 
 %wstep i opis problemu[?]
-\bibitem{2} F. Rothlauf, \textit{Design of Modern Heuristics: Principles and Application} [online], [w:] ,,Natural Computing Series", 2011 nr 1, s. 7-44
-Dostępny w Internecie: https://pdfs.semanticscholar.org/b333/0f96d1a937fc2c63b3294729cfea30826134.pdf [dostęp: 27 listopada 2018]
+\bibitem{6} F. Rothlauf, \textit{Optimization Problems}, [w:] \textit{Design of Modern Heuristics: Principles and Application}, wyd. Springer-Verlag Berlin Heidelberg, 2011, s. 7-44, ISBN 978-3-540-72961-7
+Dostępny w Internecie: https://pdfs.semanticscholar.org/b333/0f96d1a937fc2c63b3294729cfea30826134.pdf
+[dostęp: 27 listopada 2018]
 
 %wstep i opis problemu
-\bibitem{3} R. Mart'ı and G. Reinelt, The Linear Ordering Problem, Exact and Heuristic Methods
-in Combinatorial Optimization 175, DOI: 10.1007/978-3-642-16729-4 2,
-c Springer-Verlag Berlin Heidelberg 2011
-[dostęp 28 listopada 2018]
+\bibitem{7} R. Martí, G. Reinelt, \textit{Heuristic Methods}, [w:] \textit{The Linear Ordering Problem, Exact and Heuristic Methods in Combinatorial Optimization}, wyd. Springer-Verlag Berlin Heidelberg, 2011, s. 17-40, ISBN 978-3-642-16728-7
 
 %problemy odwrotne/1 rozdzial
-\bibitem{4}http://prac.im.pwr.edu.pl/~plociniczak/lib/exe/fetch.php?media=odwrotne.pdf
+\bibitem{8} http://prac.im.pwr.edu.pl/$\sim$plociniczak/lib/exe/fetch.php?media=odwrotne.pdf
+[dostęp: 10 grudnia 2018]
 
-\bibitem{5}https://www.math.unl.edu/~scohn1/8423/wellposed.pdf
+\bibitem{9} https://www.math.unl.edu/$\sim$scohn1/8423/wellposed.pdf
+ [dostęp: 10 grudnia 2018]
+
+\bibitem{10}E. Hetmaniok, A. Zielonka, D. Słota, \textit{Zastosowanie algorytmu selekcji klonalnej do odtworzenia warunku brzegowego trzeciego rodzaju}, [w:] ,,Zeszyty naukowe Politechniki Śląskiej", 2012 nr 2/1874
+
+\bibitem{11} E. Hetmaniok, D. Słota, A. Zielonka, \textit{Application of the Ant Colony Optimization Algorithm for Reconstruction of the Thermal Conductivity Coefficient}, [w:] \textit{Swarm and Evolutionary Computation}, wyd. Springer-Verlag Berlin Heidelberg,  2012,  s. 240-248, ISBN 978-3-642-29352-8
 
 
 \end{thebibliography}
